# frame-ble-connect

./: .gitignore  PARKING_VIOLATIONS_DATA_NOTES.md  README.md  README_API.md  README_HAPTIC_CAPTURE.md  README_MOONDREAM_ENDPOINTS.md  capture_and_analyze.py  debug_capture_photo.py  demo_flow.py  demo_violations_workflow.py  env.example  example_frame_usage.py  frame_interface_iterate.py  image.b64  moondream_final_test.json  moondream_reordered_test.json  moondream_simple_test.json  moondream_test.json  moondream_test_fixed.json  moondream_test_results.json  pylint_haptic_frame_service.txt  pyproject.toml  run.py  start_api.py  test_api.py  test_enhanced_analysis.py  test_frame_interface.py  test_haptic_capture.py  test_haptic_curl.sh  test_haptic_detector.py  test_moondream_debug.py  test_moondream_endpoints.py  test_moondream_real_image.py  test_parking_analysis.py  test_parking_violations.py  test_real_haptic.py  test_restaurant.py  test_static_serving.py  test_violation_count.py  test_violations_by_zone.py
apps/: README_PARKING_VIOLATIONS.md  parking_violations.py
src/ai/: __init__.py
src/ai/processors/: moondream_processor.py
src/api/: __init__.py  api.py  main.py
src/api/models/: requests.py  responses.py
src/api/routes/: __init__.py  analysis.py  device.py  haptic.py  haptic_test.py  parking.py
src/api/services/: frame_msg_service.py  haptic_frame_service.py  parking_service.py  restaurant_service.py
src/connect/: connect.py  frame_interface.py  haptic_detector.py  main.py  single_capture.py  test_haptic.py
src/connect/lua/: haptic_camera_app.lua  (+1 more)
